# ChangeLog for dev-lang/ekopath
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ekopath/ChangeLog,v 1.25 2015/05/04 04:30:46 mgorny Exp $

*ekopath-6.0.348_p20150502 (04 May 2015)

  04 May 2015; Michał Górny <mgorny@gentoo.org>
  +ekopath-6.0.348_p20150502.ebuild:
  Snapshot bump

*ekopath-6.0.334_p20150421 (22 Apr 2015)

  22 Apr 2015; Michał Górny <mgorny@gentoo.org>
  +ekopath-6.0.334_p20150421.ebuild, metadata.xml:
  Version bump. Upstream fixed a few irritating bugs, including the sandbox
  violations and lack of AMD k8 support. Cleaned up the ebuild a bit, added
  RESTRICT=bindist per bug #536262.

*ekopath-5.0.5_pre20150226 (28 Feb 2015)

  28 Feb 2015; Michał Górny <mgorny@gentoo.org>
  +ekopath-5.0.5_pre20150226.ebuild:
  Version bump. Correct LICENSE.

  04 Jan 2015;  <anarchy@gentoo.org> ekopath-5.0.1_pre20131115.ebuild:
  Use XT_PAX for marking the installer as EI_PAX is obsolete and PT_PAX breaks
  the installer.

  22 May 2014; Sébastien Fabbro <bicatali@gentoo.org>
  -ekopath-4.0.12.1_pre20121102.ebuild, -ekopath-5.0.0_pre20130113.ebuild,
  ekopath-5.0.1_pre20131115.ebuild:
  Removed old versions with non-existing upstream tar balls. Add horrible hacks
  for sandbox violations, bug #511016

*ekopath-5.0.1_pre20131115 (20 May 2014)

  20 May 2014; Sébastien Fabbro <bicatali@gentoo.org>
  +ekopath-5.0.1_pre20131115.ebuild, metadata.xml:
  Version bump, keyworded amd64-linux

  17 Mar 2014; Kacper Kowalik <xarthisius@gentoo.org> metadata.xml:
  Remove myself from metadata.xml

  24 Mar 2013; Kacper Kowalik <xarthisius@gentoo.org>
  ekopath-4.0.12.1_pre20121102.ebuild, ekopath-5.0.0_pre20130113.ebuild:
  Install docs unconditionally, add proper dir to MANPATH. Thanks to
  nanikata@gmail.com for the patch. Fixes bug 460428

*ekopath-5.0.0_pre20130113 (14 Jan 2013)

  14 Jan 2013; Kacper Kowalik <xarthisius@gentoo.org>