@@ -3,30 +3,32 @@ Hash: SHA256
 
 DIST ekopath-2015-04-21-installer.run 50223364 SHA256 fe2ddaa8d0b48c8e2811a9ba312e67a998631cf57c7de957c77176c4c84221a9 SHA512 0e8c50046b67b28dfdd53820ed3fe579c3a22a127d3417b8dbe929b5ded530ec60b7591d2ce49bd17f6e5d0584a1e036d748076a9be91549f18b92342451e58c WHIRLPOOL c2205eb355252f23ef3c8dca9410a4f3e57dfe4909dd81977bc7a559e11ac25203efcb115d739dab2f71f3c2b0897de185c7a40a5f1ca48c40c456b446e0144e
 DIST ekopath-2015-05-02-installer.run 50240814 SHA256 7e6a879e90c48c6d15dddbfd3aedebaa3ee3f47e8653e5b6a1f704f224c69072 SHA512 86004bf4e8d9588bc8562cf8797e7df954a5f3ffb41d1b493db224911692ec6c15d293d0f4f92b7d427e93b7a378f0475c8275ddfbd0719a4cf06e4d20d8f7e1 WHIRLPOOL bb75def37eba7464661f800fd4d0e327a206ec2272b748fd2b79cea56745e569d53529ef50ee28c16f587338cd91954fa89ba86f0d1f4f74cf212086052b8d07
+DIST ekopath-2015-05-11-installer.run 49721830 SHA256 754827572dc6a41870de5074e9da4f40fd1a10ce5887df3c293700604f928cfa SHA512 a042fb3b8dc31f46033c6b42ed00cc7eb0a9a9111ee284099bab8259d0cef9c13a942d41e34955b0ad6a7d16bda1c1f7ff48d5fdf9d9fcd8ff6bd782fea49768 WHIRLPOOL ba7c24b341637f20b91b26120c7cc92b817ab63699db131820901ee3d6a48f175c3beb7cafc7e14ec077f6ebaa35b4e089ec2899a835a6a44f2d32f89f1c5572
 DIST ekopath-5.0.1_pre20131115.run 49693707 SHA256 8db9733adb8a60626f7fce806a943743485cd4e733e284bdb557b384c519c3f2 SHA512 306664b1874801d89d9add46b13d63f4d0f26e008c71091ba25ab9cec78f559be438d8089e5df6df3ede553e2178fdc17150b9b26a7dcddfbeb3975e8b04a2d8 WHIRLPOOL 78705fadecd0990b98582394dce5494728e3a56ff8f20f43dad9da2cd6ae5e97ef435e13dae62da5e127df4ef6a5ae923b95243d2d240e5fc579eccd6abdf390
 DIST ekopath-5.0.5_pre20150226.run 46800428 SHA256 aa5f5f4124338631b92ef4067539305c354a537369e07ed72e84977d5ff558c4 SHA512 d4871287fa65d65404246a3524640bf479897b5faa87452b570312a6e2231d1d8ce56f741e944d9fb500c1e787a4622d48027dff86c58f32bde0504d2c8649d4 WHIRLPOOL 9fcddafe0b06ffe85c6bf98ae35e331de70a01f93bdd0c6506be8dec2549adbb6804ac135b27a32603028af263e3d2088aaef8afaab3eff095ee0bf869d0f9b5
 EBUILD ekopath-5.0.1_pre20131115.ebuild 2418 SHA256 5a56f0b4fbfa307c4e99bd0970908a91310bd18383bc9966b1d4085569948b90 SHA512 e42671ec0ab16612230875b42c5395a663d51bfecbd686d0a3835ba0bc4408c718769e24cc09f2963a76d45ce25056bd75a9166e6b5d27561bc81c8843da1963 WHIRLPOOL 831dddc128d650eded992a52e519015e4cf89d7159849d5f669faf8522e30e4800d3280e7912fabe62ec1105518e61bc29b72da0bcdc42afa1b798a934ce94db
 EBUILD ekopath-5.0.5_pre20150226.ebuild 2487 SHA256 95a470081322c7968225c05610b67a3910d54d9216aa8b5c797c64c5762c481f SHA512 8cf06684675128ad065f90b408cfc5031a9a120cfc98ac360010a26454545245411750963c3e0356d7bcbcdcfa2aa06512b99be1162af3cffbfd193768f4ccbb WHIRLPOOL 8fad89cc5913ff07f59b3ece67213a905f23b56af7081c81a2fad26b306e57b5d0c7f2adaadac99a3cfb017eaaaea19e83c91fe7bd2bed18b26e1724493ca634
 EBUILD ekopath-6.0.334_p20150421.ebuild 1513 SHA256 cbb2197f6be4f33e5a7f1096912beb9349eca516dd52c3995e25ad985d20a949 SHA512 26067804a751459ba2ded5c962392a5edb2dd9ae332e71f2d5d1ee9919c9ee68755da31f4c8fe7f964221bc3318b95692f4b9c968cd1d2a4a2ff57718ef21b30 WHIRLPOOL 9382bfcb6fee3c224f83961f7d008f54c273596e0c87b74f3caf8f3905e31d3599f5cdd3a0bd4408cdec5c7c399e8cd5006d8d2c770de813bcd3bd9371a6a45d
 EBUILD ekopath-6.0.348_p20150502.ebuild 1513 SHA256 9d7263a95c657df889c3ca202d0b968f9e821146ab426ac926a98151a0b3d6bb SHA512 a186ca1c095d61f2bc205c769ecd8a50ff35d04f4b415792e5e13608c491bb0cac1dcf1d6099dde836b9bd891a4080624b7aaf456bf48626896b45d9b63a78c7 WHIRLPOOL fe15dd29b4151526ad5345dd40f294a2e08e3080510efbf830406c317a769e0ce993e4f70665484d14262144873cda77301912afc4f4f5bf520e65f805347274
-MISC ChangeLog 5970 SHA256 3400c97f48fc4245252bb7c22617310921c2fc913c8725c411880232299dd3c5 SHA512 61ab876061f41d02abf4dfe5c81b321105e10e22eb468baa2bbf212167e943e2cfa285f06409b64c35d643db2ec0c43aed6f6888b0a7c559834526137d34d35b WHIRLPOOL c50b684ad18e455ba798f440cf9ba3d9d626c3d3bd4a57b1c637e09480653cb014eb64cf99f38cca18ba70e4cb293d9c81a652d38585308b46a1d380d3023ac2
+EBUILD ekopath-6.0.357_p20150511.ebuild 1513 SHA256 f9c76348a07c367e782a6db0845e85423230006b7d7d2c9acddea0761a4b523b SHA512 387729672f3460f071fe6150ecd21e47f1d780cc15f470b98f81471bd6cc6561edfc432837a2a611c4341db62f1d78e756c05a57fddb3639fa4a30a471eda8b1 WHIRLPOOL 6d78ed36111f27b924bcf2bc52ddf8b29c68f57219d0d592754134b01550916790dbe3c77c68625ca17de63873128aded556ad129517db2d167b2186f7bb4fde
+MISC ChangeLog 6116 SHA256 3b28d67eb941ea79af520bf730304546db946b49629eec7b3a5895478eb68b91 SHA512 477d584bc9fa20b013dee125ab5612dd93a28443f1e119a9c631d48209d5f1fabba64fa9d0869f69e0a4d68bec13b421a37f5221645953983fef62273df53364 WHIRLPOOL 50a0974d725027b571a52844b3829603cb96d1929c0bb3aad0cf75382b9ee4c1df0bf8836069abfde590cd45a875c1b55a263f3be8322ead0c077e8584926627
 MISC metadata.xml 633 SHA256 c3ec9cb61bd7512d9bde8b9ad0cd3cec8d9b4aedf63e0353878e4548eac2394d SHA512 f9948067dccfc2b359d4c18fd24d10df86f1236c7cb18526932f7a60a410529dcc258205f8cd32d04fe1e0e1effc21e3f1ce151c4e842293086bcdf0e3bc5c5e WHIRLPOOL 1631ce7e58ec258a526bc0c2f4c67fade2f1040730d23cdf3e278068d72dfb568b37b3379a03e18a82dd0f88f29ab56d60b995c82f7750569da93c88d6a462a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVRvX4XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVUj2vXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOzeEQAIn+zbulzzlAq4m885ww1v1J
-o+li5RKCg1adVQZ6TO76M3YnnZgeNnyVievrQYP4Nk4dND9OaimtyutONPJU2MDM
-Y6tX6FZH3m06BB4jCAOmbYcTIm9fbgpyBOc6Ej2A1I1eWlcJB462CxAxDcUi+jlv
-YCh/crY5D93jUYBRwmBCPJIOeX2noyrvD+wLz5ZWFlSd9eKewyGAxEM+592/qc3o
-aul36PyLx43ec6fJRwl5+BJ+PqQPX96q0z8/rnA99YTkV1L1Ow9+htIGjcWfFo3I
-/CitblrrwttS2i48SgzSk+5I/DZ6C50zPeAryyC2kRHJrh87heV5ROlhLYEoeZlF
-yV+b1ueZBZdM5K1dLvRDy6A08a9JVNRNDMCOZSf3g6aKHPrXVTYCaSANtxvr6dod
-9ScTlrBLp4FFwyEsjOD5mlVAy0WdVOSTvnbsaLbj0hnukjySuJuIM6At9foGHI8M
-h3a4z+DpB9A7852Eqx5pEa1sPTUTWm8Fc3azY93rVOuU7WJF7wSX7T1eo8u0jIZo
-9DNhNbKzhMgHlMFU7dW431mAY8jRKKoHi71Qd5RMMTPpJ1mpVgx3L3JX7Gec5I6C
-ddudEo/3Gc75/yZYcUZh6KLBVNb0WhjBa5ivMoD5UshaF59vuasp1p+SaG7pOWHW
-n2PxXR6b4td4CWxS45/7
-=r8HP
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOfpIP/2jAzNwtd4IJ+Lgufw3u8sfX
+yj+7+2FxZGJ6qHtXB9XwZe9p2zW67BH+KZEG1vw7UZiBCrmp4aOkYfQoR9LARNMh
+r4ePdK7hbShI95PH9IDzcEdTC1WvpgQ4Xr2GvE3KgxpUR0v4MN1HCONO/YP9m2j1
+4csr0WSoMErj5lKkqvIzVKjqlELwQtPyvpYHTlkY+HJq50RqtYPzwuhiCpvMPZZO
+HFROkg8CNb41dpIKxjziH6nMcBR/dVHc51wSMtciGkcPcT1DSwLgKpMSu63bPHs/
+u/T+eJ7n0NoQv9/GLZhZrbcwqcAZu/+uJVB5pNNdrthKZ1rZfhf7g5oXTzNzr2Uy
+B5bgaq7qQhOrpqzaPwA5KkoYaqaeRMG9h7ZfNyBgn7GjAvaolu7jkCWs5AER/aCs
+4+XFlqOJ9NUeVnEICyFQclof/L3m67QDUuuSN+OHWwREZaYhwBQzsctKDvO5IWW1
+wRpsbACVAWZ+WiVVMU6IDURVsT+eWdsq67z9/kRKCGksk1B1g6YPYEYU40j16XQu
+BAUHYYQ2LwBV3eisa3zheb0mnWnsgTzqdK2IFXu2xAPutEnJuL/3iFmmnFdJ3eVT
+6ZXiBbsh/5IBL0nJrxpLcTsArJSaxOjQ0vjnPAQL/6rO6zhHGs21vvAJu4k10HQE
+Iwl0NNdwKQRNP3dv6F31
+=YiMT
 -----END PGP SIGNATURE-----
