@@ -3,18 +3,32 @@ Hash: SHA256
 
 DIST jsoncpp-0.10.1.tar.gz 196664 SHA256 ff933ad6d25db77a33c819350ff65842111edb2c8dcbb806efc9d93d0ec53ea5 SHA512 867d5ddb56b02da4d423914f3a553cf9e9b160f876730ba781f077d9333d7ca38d4e000b2a933963f7117f0ace2266c3eb9e4305d23cb6c24501ad6d4036da08 WHIRLPOOL ed605c8775f0ae7847fc0129909c7aad1bc99f1511c3a8780e7d8ec7292c6bd7ad0449904dae52295db93590c717fc903566568753bf68bdc104850398300ac2
 DIST jsoncpp-0.10.2.tar.gz 197188 SHA256 37bb72615018522bb78a5eb425b36dfc79e049c1d5471b724f7ccadeac0ed479 SHA512 8e451e3ba37094445ab098d5b9f7236ac84e2f15d98e2039c565e609b757c2383e91850bd86aca507ca5cd2f733fedc484bb7760eeeee7fe9bace71d97ae0d2e WHIRLPOOL 85f9861e77a7c3cecd5e859adde832b7f12a0c5eae04ecbee203e5d8c4b8b13ba034b4aa6b78a3b981aa392a4ea6a26c2e1d411ae97768d7ed422f71ec2e5d79
+DIST jsoncpp-1.6.2.tar.gz 198824 SHA256 c40e5a2583df633b904525305bda40b622d9971fee1ece7ce48ca723a4907d36 SHA512 b70dc99ec57357943f7b56d013abc6245c1ffdc3c16313bcf72ba624fa5f6d72eebfda0188a229c7757e00e3ad2c19d67048acd33c22260079e37b32000a39a7 WHIRLPOOL 35f337812bda3cb24a9b221578c72d48876427e2fe10c1c57beea308b855c6d48d688d73260bd7915261676bd4463062191948d630bfac53350a855d89a8d7fe
 DIST jsoncpp-src-0.5.0.tar.gz 107466 SHA256 22b14ecd0de8cdad2b6b6839f6d0804d3b84e91f42861ebd843832a26a927433 SHA512 2815d3523f92c33a5be3221161a590a0fddd16cb22e5dc634791535ee44271ec4fbb64f81cc958a87b1f029a8108ed9f169cda5a2d0422f60699ac286386a1bc WHIRLPOOL f6174f08dc647a189fc17f93343a72fb83bea66f27e60707b6bf300a185d4d3e8d5f347dd6f0d06462e45086c7c1dbd352e22ac08fef13d9235a65bad44f0d67
 DIST jsoncpp-src-0.6.0-rc2.tar.gz 117661 SHA256 d4d193d163f520b08b9155cba978615892ca1359d77e3fb261fce2f86d09b283 SHA512 5d44e766aa2d7657bc68cf16173130febaa6744d5fca0c6df5465617a3f306023a17cbeb07a62ad1a34c2d183d916401b4be48f37c2416c895db4ad5d9481b3d WHIRLPOOL bfa7e70e14f3ed0911c5127da0d2099ca8b9159a900a5bc5147d1e50b5a9f9d5be69a8d46a761d277ca1edabaab8d0d3b9f81417572e4664ed8239fd83c953e6
 EBUILD jsoncpp-0.10.1.ebuild 1395 SHA256 3e44a8f291c7e7baf2880b96a60fe2e01b6f4b07f7921d7169017f86409fb412 SHA512 a70444b99dbc67e90f52c62342ffbf3bc2fb8054c3938095605f63b84e0f34f143be51bbd9277b08cb4be9d6fbd13e0d7ddfd3366294935aab518d4c3a69351f WHIRLPOOL 432c6bf597cd5f4e866181d8e6b58e9fc959f2ce83bf3326024d5cb4435db4151f6fbabd5807ecb4246e3922c5628c4a9bbe937876397599df9c91fe418147d5
 EBUILD jsoncpp-0.10.2.ebuild 1399 SHA256 bf6ce4efd3ef2775512b755b66e5b5a5bea23a63a315509f10fa7d4a1991d41b SHA512 b4d647f4ed091a1294812b16f57995d93545660a3705eea917fc21174c66e7d9a356ff06cba59054af5b798b73f0e359dae9647827a3fee22871a96c74a02b24 WHIRLPOOL 523ded8ef99d35932c150110499a5fc290f082cc6a5bc511b27f87077d12f7acde7f5b11a6b344917ed6230e7cbe606f4863c3ac71a280affad88215c8ccffc8
 EBUILD jsoncpp-0.5.0-r1.ebuild 1255 SHA256 c61db8f16bd9d0e77deb7d1b965fee0e419b05a3b4950d17211f6fadb0764b48 SHA512 3605de7eed9486b316a6e4317d92042745089bcff7d472131607f6f5c04c902e760985c77ff7c8cc62c8926a7c823db1010fcb3306c44a0600113249dd42fa21 WHIRLPOOL c6cff36b942b530850618f83006a2e5d838a427ff78b8d3c70f7ed31d7600ba564199446f1cae2a0751c82446bc9299bdd311606a99477631f7366f6c80d38e2
 EBUILD jsoncpp-0.6.0_rc2.ebuild 1380 SHA256 952378041c5fdd279d4142cb355b8f0f275d0be797dea4ab99737542b30a784b SHA512 2fc76032e8a295e3cf245e876cf55671f31602052eeecda0a686c2f6f4f4a04c52c12454e18fa9991db4ff82c288688a349a3e632c5ab6ac4c8ae25a20971d5e WHIRLPOOL 7206ac2645ce33330310dca9c4b9e2bd21496ca3d84fae195ad2f47ff471a56f52293b6dc3281757fbfe03b04a4c7899b101db3db03351b0631a860b8cc34463
-MISC ChangeLog 2287 SHA256 2b731fbbe89d70b08a25859a55fbe6e6c48339baa4ea5e86fcb90e663b4e6710 SHA512 dd22f89ea87b9dffcb9abef37180c5631dc5a451a3d031469f04bae62ec7b3ea28f85ac654669d2d6ae1f28c7818bae63681e4ea5ef9eb1565e5c60048a09dbc WHIRLPOOL 418628846bd73d9be3bf9a51c5f15a390c22516662dcdb6b5927a17621b8352fa3f47985b6cd00edb9bca5ecf1b793c03a983d1c4cd7a60efff21d81118dc0df
+EBUILD jsoncpp-1.6.2.ebuild 1403 SHA256 c8f560d8ae275ea6ba1ee7a3ad7d4e885a507c8074f2faeedb2bb74e3a636b99 SHA512 0368e9d9c0c510c40f3abdcf3b088c40552ab9b9cbad2037659d9caeb29c047ff5a38acf844887fe0b323682f2871dbf5e4f33859e58412a4b37ebe71dbf7937 WHIRLPOOL bc5ff83973b343c9aef9f4eefd87bb590278522b99040e710def2187fb83cf31299c14150cb452cdf89458e824b49551a8d09d01325afc90ec8d06fe00ba536f
+MISC ChangeLog 2444 SHA256 9eaff81a1c370d7ef0c758281b7f8a2a23977dc58ea9f9497e82395857e8a2fe SHA512 6505dd731cdca01f1cc4250304c0e663067ee4d205dd1d2540f29c9dc3d516ac9811767fa8f92bd445cea12df84a9b72c2bbb6ce9b2f4286574a440e0706453a WHIRLPOOL 6fa4d94fe276684d057ed714ebe90f736d62c84ea5aad6b17ff6a7788d0ba9333b8883e625d3d94fb2cbb9ac8ceab9ea2ebd363c6e5db362b15ca262fae525d1
 MISC metadata.xml 344 SHA256 0e2c74486b38948bd35a2b844d12a4b385c427b29c658a7c06407d857cbbfb29 SHA512 7319802e9400eef2e90570cc23cf94f6ffa96bcfd7552c0d01e96c4cc7dba16ade6018f29d7e811c1030f27bc1a30d1584f3f0bfffbf785e901a5732cd897846 WHIRLPOOL 4640d7868576e11809d1caafe414d7664adf3bf67a178bd935f509a38c834483a729dc07de8773334e845a22102d097f05732cab57c49b35355ed1efffa4c4e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVIdpkACgkQVWmRsqeSphO2fgCfbydkmG8MW6Y1CsHejPtOErzb
-408AnRf9WqidB35l+JTB/qA78D7X33ZB
-=lJAy
+iQJ8BAEBCABmBQJVUj7wXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO8o4QAM7/q8RtClMLg8Vy/ax3NLew
+uY1Ee0HugjMeOEhz6N941RDgOVoFJ25MiD3s9jV5BUOD/G44PtFJM/7Fn7cdk7/4
+j4TWh72TvS+4dr89xstv9Uv0QppIFOEm9ihBNuSpx0IIqlWOl5fJsjDNbfJzEuL6
+l1WxNVRA3pFP7h1yevB3fs5VZNiuyztHEK1IRAkpSa6Ptbyr3R+36qqL6YlEnp4F
+MOi59JG8+zltXaRyXfqF6twT8oSTGVnrO4s7YWSjed7yA4TvsIkqSLEoCLWsgctR
+lxUVMZG9PmepocQ0nU8Ui8dlc4FD8vAP8vxId6TfCKLXDbdLfpPvfw2Min3wEY1/
+L2odgzdM/HnDFsk5NMX2EDLFg9EP9zPOLxocmz6UP2HMau/pm/LfSvH+4RfQ9n6q
+Av/LKPp+W0KxEsozOSoQg32k0xHf6pFF4Oavuft1y4bPFZMP1fD89li58Nc8fnVy
+FqRHXn4nc6tNm5pIHEXWnpD/fbavy4XWqoaTJdle89ywtjS2QsdUs+4/+uEJ0fCt
+netJKs8clflJX6hA9g0bH8T1wOtWQfvblc2RO7ChJ0SAYZTs5Eq5RTVq9PoDR2T3
+8uQSjPcZIYfdfXAWh7D5l/VKRckjk09RFTufBVI86qsAnLfJmnL+1zAymyZmAt8d
++QYZ5Txx/7DQwXGnKqns
+=0nVc
 -----END PGP SIGNATURE-----
