@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=doc? ( app-doc/doxygen || ( >=dev-lang/python-2.7.5-r2:2.7 ) ) test? ( || ( >=dev-lang/python-2.7.5-r2:2.7 ) ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=C++ JSON reader and writer
+EAPI=5
+HOMEPAGE=https://github.com/open-source-parsers/jsoncpp
+IUSE=doc test
+KEYWORDS=~amd64 ~arm ~arm64 ~hppa ~mips ~ppc64 ~x86
+LICENSE=|| ( public-domain MIT )
+SLOT=0/1
+SRC_URI=https://github.com/open-source-parsers/jsoncpp/archive/1.6.2.tar.gz -> jsoncpp-1.6.2.tar.gz
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=e836b6cf653c18e49a4401f4513b4d4d
