@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/jsoncpp
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/jsoncpp/ChangeLog,v 1.17 2015/05/05 07:51:52 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/jsoncpp/ChangeLog,v 1.18 2015/05/12 17:57:03 mgorny Exp $
+
+*jsoncpp-1.6.2 (12 May 2015)
+
+  12 May 2015; Michał Górny <mgorny@gentoo.org> +jsoncpp-1.6.2.ebuild:
+  Version bump to the ABI-incompatible 1.x branch
 
   05 May 2015; Jeroen Roovers <jer@gentoo.org> jsoncpp-0.10.2.ebuild:
   Mark ~ppc64 (bug #539126).
