@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/ekopath
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ekopath/ChangeLog,v 1.25 2015/05/04 04:30:46 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ekopath/ChangeLog,v 1.26 2015/05/12 17:51:40 mgorny Exp $
+
+*ekopath-6.0.357_p20150511 (12 May 2015)
+
+  12 May 2015; Michał Górny <mgorny@gentoo.org>
+  +ekopath-6.0.357_p20150511.ebuild:
+  Snapshot bump
 
 *ekopath-6.0.348_p20150502 (04 May 2015)
 
